--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "start": "ts-node index.ts",
     "start-dev": "tsnd index.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write \"**/*.ts\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -22,6 +24,7 @@
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.4",
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
@@ -36,6 +39,13 @@
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.0",
+    "@typescript-eslint/parser": "^5.59.0",
+    "eslint": "^8.38.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "ts-jest": "^29.1.0",
