--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start-dev": "tsnd index.ts",
     "build": "tsc",
     "test": "jest",
-    "format": "prettier --write \"**/*.ts\""
+    "format": "prettier --write \"**/*.ts\"",
+    "lint": "eslint ./**/*.ts",
+    "lint-format": "eslint ./**/*.ts --fix"
   },
   "keywords": [],
   "author": "",
@@ -44,6 +46,7 @@
     "eslint": "^8.38.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^29.5.0",
