--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,12 +6,23 @@
     "target": "ES6",
     "downlevelIteration": true,
     "module": "CommonJS",
-    "lib": ["ES6", "DOM"],
+    "lib": [
+      "ES6",
+      "DOM"
+    ],
     "outDir": "dist",
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "./**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "test/**/*.ts",
+    "dist"
+  ]
 }
