--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "typeRoots": ["./types"],
     "noImplicitAny": true,
     "preserveConstEnums": true,
     "sourceMap": true,
