--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "helmet": "^6.1.5",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.4",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.1",
     "uuid": "^9.0.0"
@@ -40,6 +41,7 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.0",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/uuid": "^9.0.1",
