--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.1",
+    "papaparse": "^5.4.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
+    "@types/papaparse": "^5.3.7",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
