--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.1",
     "papaparse": "^5.4.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
