fix(config): update environment variables

--- a/config/.env.sample
+++ b/config/.env.sample
@@ -1,3 +1,12 @@
 MONGO_URL = "połączenie z baza danych"
 CORS_ORIGIN = "http://localhost:3000"
 SECRET_KEY= "secret key generowany dla każdego tokena"
+
+EXPIRES_TOKEN = '1d'
+EXPIRES_REGISTER_TOKEN = '7d'
+EXPIRES_FORGOT_PWD_TOKEN = '1h'
+
+SMTP_HOST = 'host do serwers SMTP'
+SMTP_PORT = 'port'
+SMTP_USERNAME = 'nazwa użytkownika'
+SMTP_PWD = 'hasło'
