--- a/config/.env.sample
+++ b/config/.env.sample
@@ -1,6 +1,6 @@
 MONGO_URL = "połączenie z baza danych"
 CORS_ORIGIN = "http://localhost:3000"
-SECRET_KEY= "secret key generowany dla każdego tokena"
+JWT_SECRET= "secret key generowany dla każdego tokena"
 
 EXPIRES_TOKEN = '1d'
 EXPIRES_REGISTER_TOKEN = '7d'
@@ -8,5 +8,6 @@ EXPIRES_FORGOT_PWD_TOKEN = '1h'
 
 SMTP_HOST = 'host do serwers SMTP'
 SMTP_PORT = 'port'
+SMTP_SECURE = false // true jeżeli port 465
 SMTP_USERNAME = 'nazwa użytkownika'
 SMTP_PWD = 'hasło'
