ref: .env sample

--- a/config/.env.sample
+++ b/config/.env.sample
@@ -6,6 +6,9 @@ EXPIRES_TOKEN = '1d'
 EXPIRES_REGISTER_TOKEN = '7d'
 EXPIRES_FORGOT_PWD_TOKEN = '1h'
 
+COOKIE_SECURE = false // true jeżeli https
+COOKIE_DOMAIN = 'localhost' //domena
+
 SMTP_HOST = 'host do serwers SMTP'
 SMTP_PORT = 'port'
 SMTP_SECURE = false // true jeżeli port 465
