--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mysql2": "^3.2.3",
     "nodemailer": "^6.9.1",
     "papaparse": "^5.4.1",
+    "sanitize-html": "^2.10.0",
     "uuid": "^9.0.0",
     "yup": "^1.1.1"
   },
@@ -49,6 +50,7 @@
     "@types/node": "^18.15.11",
     "@types/nodemailer": "^6.4.7",
     "@types/papaparse": "^5.3.7",
+    "@types/sanitize-html": "^2.9.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
